--- a/page.html
+++ b/page.html
@@ -29,6 +29,7 @@
         <div class="form-group">
             <label for="password">Password:</label>
             <input type="password" id="password" placeholder="Enter your password">
+            <h5>Only numbers and letters are legal, any symbols or spaces are illegal!</h5>
         </div>
         <button class="btn" onclick="register()">Register</button>
         <div id="registerResult"></div>
